kubernetes/apps/auth/pocketid/pocketid/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
  labels:
    app: pocketid
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pocketid
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: pocketid
        app: pocketid
    spec:
      containers:
        - name: pocket-id
          image: harbor.cloud.traunseenet.com/ghcr.io/pocket-id/pocket-id:v2.18@sha256:323e7ef5bfacf7cf32f22f3d10ccdf48e0c97c94d67e7e40b0b996830deb5165
          ports:
            - containerPort: 1411
              name: http
              protocol: TCP
          volumeMounts:
            - name: pocketid-data
              mountPath: /app/data
          livenessProbe:
            exec:
              command:
                - /app/pocket-id
                - healthcheck
            initialDelaySeconds: 10
            periodSeconds: 90
            timeoutSeconds: 5
            failureThreshold: 2
          readinessProbe:
            exec:
              command:
                - /app/pocket-id
                - healthcheck
            initialDelaySeconds: 10
            periodSeconds: 90
            timeoutSeconds: 5
            failureThreshold: 2
      volumes:
        - name: pocketid-data
          persistentVolumeClaim:
            claimName: pocketid-data
